--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,7 +7,9 @@ body{
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    background: #c9e9e5;
 }
+
 
 @media (max-width: 770px){
     .container{
